--- a/views/playground/deployer/build.html.twig
+++ b/views/playground/deployer/build.html.twig
@@ -123,39 +123,8 @@
 
         <div class="container" id="top">
             <div class="inner-wrapper">
-                <nav role="navigation" class="nav-main" aria-label="primary" id="aria-main-nav">
-                    <div class="nav-primary t-nav-primary">
-                        <a tabindex="1" href="#" class="jadu-branding" aria-label="Home">
-                            <span class="jadu-logomark">
-                                <span class="hide">Return to Dashboard</span>
-                            </span>
-                            <span class="jadu-wordmark">Jadu</span>
-                        </a>
-                        <ul class="nav-items">
-                            <li class="nav-item t-nav-item">
-                                <a href="#" tabindex="1" class="nav-link t-nav-link">
-                                    <i aria-hidden="true" class="icon-dashboard icon-fw nav-link__icon t-nav-icon"></i>
-                                    <span class="nav-link__label">Dashboard</span>
-                                </a>
-                            </li>
-                            <li class="nav-item t-nav-item">
-                                <a href="#" tabindex="1" class="nav-link t-nav-link">
-                                    <i aria-hidden="true" class="icon-server icon-fw nav-link__icon t-nav-icon"></i>
-                                    <span class="nav-link__label">Environments</span>
-                                </a>
-                            </li>
-                            <li class="nav-item t-nav-item">
-                                <a href="#" tabindex="1" class="nav-link t-nav-link">
-                                    <i aria-hidden="true" class="icon-envelope-o icon-fw nav-link__icon t-nav-icon"></i>
-                                    <span class="nav-link__label">Alerts</span>
-                                </a>
-                            </li>
 
-                        </ul>
-                    </div>
-
-                    <!-- removed nav-secondary etc as not needed -->
-                </nav>
+                {% include '@pulsar/playground/deployer/partials/nav.html.twig' %}
 
                 <header class="toolbar">
                     <button tabindex="2" class="mobile-menu-button t-mobile-menu-button" aria-expanded="false" aria-controls="aria-main-nav" aria-label="Toggle main menu">Menu</button>
@@ -246,6 +215,7 @@
                             <div class="tab__container">
                                 <section class="actionsbar" aria-label="page actions">
                                     <div class="float--right">
+                                        <!-- this is a link, because it navigates somewhere -->
                                         <a class="btn btn--primary" href="#">View Package</a>
 
                                         {# example when build is processing (swapped to button as links can't be disabled)
