Toolbar text position tweak

--- a/stylesheets/_component.toolbar.scss
+++ b/stylesheets/_component.toolbar.scss
@@ -46,7 +46,7 @@
 
         i {
             font-size: 18px;
-            vertical-align: middle;
+            vertical-align: text-bottom;
 
             @include respond-min($screen-desktop) {
                 font-size: 14px;
