--- a/stylesheets/_component.toolbar.scss
+++ b/stylesheets/_component.toolbar.scss
@@ -59,18 +59,18 @@
             }
         }
 
-        > .toolbar-action__text {
-            display: none;
-            margin-left: 0;
-
-            @include respond-min($screen-desktop) {
-                display: inline;
-                margin-left: 5px;
-            }
-        }
-
         > .caret {
             border-top-color: color(text);
+        }
+    }
+
+    .toolbar-action__text {
+        display: none;
+        margin-left: 0;
+
+        @include respond-min($screen-desktop) {
+            display: inline;
+            margin-left: 5px;
         }
     }
 
