Add an option for non-link text elements to be padded in a dropdown list

--- a/stylesheets/_component.dropdowns.scss
+++ b/stylesheets/_component.dropdowns.scss
@@ -67,7 +67,8 @@
 
   // Links within the dropdown menu
   > li > a,
-  > li > .btn {
+  > li > .btn,
+  > li > span {
     background: none;
     border: 0;
     box-shadow: none;
