--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2503,7 +2503,7 @@ actions-column-text     | string | The text content of the actions column header
                     </thead>
                     <tbody class="repeater__preview-data" data-repeater-preview-root>
                         <tr class="repeater__empty-placeholder" data-repeater-preview-placeholder>
-                            <td colspan="{{ headingLength }}" class="muted">{{ options.empty }}</td>
+                            <td colspan="{{ headingLength }}">{{ options.empty }}</td>
                             <td class="table__td--align-right table-row__actions"></td>
                         </tr>
                     </tbody>
