--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -363,7 +363,7 @@ fieldset {
         @include col-span-width(4, 9);
     }
 
-    // When used inside a modal, default to full width
+    // When used inside a modal or repeater, default to full width
     .modal,
     .table__form {
         .control__label + .controls > .form__control:not(.checkbox):not(.radio) {
