Make indented fields adjust their total width by subtracting the label width

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -363,6 +363,17 @@ fieldset {
         @include col-span-width(4, 9);
     }
 
+    // When used inside a modal or repeater, default to full width
+    .modal,
+    .table__form {
+        .control__label + .controls > .form__control:not(.checkbox):not(.radio) {
+            &,
+            & + .select2 {
+                @include col-span-width(9, 9);
+            }
+        }
+    }
+
     // column variations
     @for $i from 1 through 9 {
         .control__label + .controls > .form__control:not(.checkbox):not(.radio).form__control-col--#{$i},
@@ -639,6 +650,13 @@ fieldset {
     > .controls {
         margin-left: 0; // remove gutter
         width: 100%;
+    }
+
+    &.form__group--indent .controls {
+        @include respond-min($screen-tablet) {
+            @include shrink($form-label-cols);
+            border: 1px solid red;
+        }
     }
 
     > .controls > .control__label {
