Added caption option to datatables helper and lexicon examples

--- a/views/lexicon/tables/basic-scrolling.html.twig
+++ b/views/lexicon/tables/basic-scrolling.html.twig
@@ -3,6 +3,7 @@
 {% block tab_content %}
 
     <table class="table table--full table--horizontal">
+        <caption class="hide">A list of Servers</caption>
         <thead>
             <tr>
                 <th>Name</th>
