--- a/views/lexicon/tables/basic.html.twig
+++ b/views/lexicon/tables/basic.html.twig
@@ -2,6 +2,7 @@
 
 {% block tab_content %}
     <table class="table table--full">
+        <caption class="hide">A list of Servers</caption>
         <thead>
             <tr>
                 <th>Name</th>
