--- a/views/lexicon/tables/sortable.html.twig
+++ b/views/lexicon/tables/sortable.html.twig
@@ -2,6 +2,7 @@
 
 {% block tab_content %}
     <table class="table is-sortable table--full">
+        <caption class="hide">A sortable list of files</caption>
         <thead>
             <tr>
                 <th>File title</th>
@@ -245,6 +246,7 @@
 
     <br/>
     <table class="table is-sortable table--full">
+        <caption class="hide">Another sortable list of files</caption>
         <thead>
             <tr>
                 <th>File title</th>
