--- a/views/lexicon/forms/select2.html.twig
+++ b/views/lexicon/forms/select2.html.twig
@@ -11,7 +11,7 @@
     {{
         form.select2({
             'id': 'guid-' ~ random(),
-            'label': 'Select field',
+            'label': 'Select (single select)',
             'options': [
                 {
                     'label': 'Value one',
@@ -45,13 +45,64 @@
     {{
         form.select2({
             'id': 'guid-' ~ random(),
-            'label': 'Select multiple',
+            'label': 'Select (single + placeholder)',
+            'required': true,
+            'placeholder': 'Please choose',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select2({
+            'id': 'guid-' ~ random(),
+            'label': 'Select (multiple)',
             'multiple': true,
             'options': [
                 {
-                    'label': 'Choose',
-                    'value': ''
+                    'label': 'Value one',
+                    'value': 'value1'
                 },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                },
+                {
+                    'label': 'Value three',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value four',
+                    'value': 'value2'
+                },
+                {
+                    'label': 'Value five',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value six',
+                    'value': 'value2'
+                }
+            ]
+
+        })
+    }}
+
+    {{
+        form.select2({
+            'id': 'guid-' ~ random(),
+            'label': 'Select (multiple + placeholder)',
+            'multiple': true,
+            'placeholder': 'Please choose',
+            'options': [
                 {
                     'label': 'Value one',
                     'value': 'value1'
@@ -87,10 +138,6 @@
             'label': 'Required',
             'required': true,
             'options': [
-                {
-                    'label': 'Choose',
-                    'value': ''
-                },
                 {
                     'label': 'Value one',
                     'value': 'value1'
